[gd_scene load_steps=9 format=2]

[ext_resource path="res://Bag/bagCardDisplay.gd" type="Script" id=1]
[ext_resource path="res://Map/whitesquare.png" type="Texture" id=2]
[ext_resource path="res://UI/Shapes/squareshadow.png" type="Texture" id=3]
[ext_resource path="res://Bag/UI Elements/bagGearTabs_noArmor.png" type="Texture" id=4]
[ext_resource path="res://Bag/UI Elements/bagGearTabs_noHeadgear.png" type="Texture" id=5]
[ext_resource path="res://Bag/UI Elements/bagGearTabs_noWeapon.png" type="Texture" id=6]
[ext_resource path="res://Bag/tabArea.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 20 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="back" type="Node2D" parent="."]
position = Vector2( 37, 1 )

[node name="squareshadow3" type="NinePatchRect" parent="back"]
modulate = Color( 1, 1, 1, 0.352941 )
margin_left = -314.0
margin_top = -428.0
margin_right = 2746.0
margin_bottom = 3772.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )
patch_margin_left = 332
patch_margin_top = 339
patch_margin_right = 328
patch_margin_bottom = 314
__meta__ = {
"_edit_use_anchors_": false
}

[node name="whitesquare3" type="Sprite" parent="back"]
modulate = Color( 0.286275, 0.282353, 0.282353, 1 )
position = Vector2( -144, -217.5 )
scale = Vector2( 0.314, 0.393 )
texture = ExtResource( 2 )

[node name="noWeaponTab" type="Node2D" parent="."]
position = Vector2( 60, 0 )
z_index = 1

[node name="bagGearTabs_noWeapon" type="Sprite" parent="noWeaponTab"]
position = Vector2( 51.9995, -534 )
scale = Vector2( 0.193, 0.193 )
texture = ExtResource( 6 )

[node name="tabArea" type="Area2D" parent="noWeaponTab"]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="noWeaponTab/tabArea"]
position = Vector2( 34, -534 )
shape = SubResource( 1 )

[node name="noArmorTab" type="Node2D" parent="."]
position = Vector2( 60, 0 )
z_index = 1

[node name="bagGearTabs_noWeapon2" type="Sprite" parent="noArmorTab"]
position = Vector2( 51.9995, -480 )
scale = Vector2( 0.193, 0.193 )
texture = ExtResource( 4 )

[node name="tabArea" type="Area2D" parent="noArmorTab"]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="noArmorTab/tabArea"]
position = Vector2( 34, -480 )
shape = SubResource( 1 )

[node name="noHeadgearTab" type="Node2D" parent="."]
position = Vector2( 60, 0 )
z_index = 1

[node name="bagGearTabs_noWeapon3" type="Sprite" parent="noHeadgearTab"]
position = Vector2( 51.9995, -426 )
scale = Vector2( 0.193, 0.193 )
texture = ExtResource( 5 )

[node name="tabArea" type="Area2D" parent="noHeadgearTab"]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="noHeadgearTab/tabArea"]
position = Vector2( 34, -426 )
shape = SubResource( 1 )
[connection signal="area_entered" from="noWeaponTab/tabArea" to="noWeaponTab/tabArea" method="_on_tabArea_area_entered"]
[connection signal="area_exited" from="noWeaponTab/tabArea" to="noWeaponTab/tabArea" method="_on_tabArea_area_exited"]
[connection signal="area_entered" from="noArmorTab/tabArea" to="noArmorTab/tabArea" method="_on_tabArea_area_entered"]
[connection signal="area_exited" from="noArmorTab/tabArea" to="noArmorTab/tabArea" method="_on_tabArea_area_exited"]
[connection signal="area_entered" from="noHeadgearTab/tabArea" to="noHeadgearTab/tabArea" method="_on_tabArea_area_entered"]
[connection signal="area_exited" from="noHeadgearTab/tabArea" to="noHeadgearTab/tabArea" method="_on_tabArea_area_exited"]
